--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                             <a href="../pages/novedades-anteriores.html"><button>Novedades Anteriores</button></a>  
                             <a href="../pages/novedades-anteriores.html"><button>Informes</button></a>
                             <a href="../pages/novedades-anteriores.html"><button>ADP</button></a>
+                            <a href="../pages/novedades-anteriores.html"><button>Redes Sociales</button></a>
                             <a href="../pages/novedades-anteriores.html"><button>Ayuda</button></a>
-                            <a href="../pages/novedades-anteriores.html"><button>Novedades Anteriores</button></a>
-                            <a href="../pages/novedades-anteriores.html"><button>Novedades Anteriores</button></a>
+                            <a href="../pages/novedades-anteriores.html"><button>Datos operacion</button></a>
                         </div>
                     </div>
                 </div>
@@ -109,6 +109,9 @@
     <footer>
         <!-- linea para separar -->
         <div Class= "LineaSeparadora"></div>
+        <div class="Pie"> Web para uso interno.</div>
+        <div class="Pie"> Teleperformance Chile.</div>
+        <div class="Pie"> Facundo Keller</div>
     </footer>    
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
