--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -44,17 +44,45 @@
                 </div>
             </nav>
         </header>
-        <h1 class="TituloPrincipal">Portal TP Chile</h1>
+        <h1 class="TituloPrincipal">Contacto</h1>
+        <div>
 
+        </div>
+
+        <div class="row">
+            <div class="col"></div>
+            
+            <div class="col Formulario">
+                <h3 Class="text-decoration-underline">Dejar una consulta o recomendacion</h3>
+                <form action="#">
+                    <label class="Formulario__EstiloUnitario" for="texto">Dime tu Nombre y apellido:
+                    <input class="Formulario__EstiloUnitario" type="texto" placeholder="Nombre y apellido"><br>
+                    <label class="Formulario__EstiloUnitario" for="email">Decime tu email:
+                    <input class="Formulario__EstiloUnitario" type="email" placeholder="Email" name="Email"><br>
+                    </label>
+                    <p>En que sector trabajas?</p>
+                    <select class="Formulario__EstiloUnitario"  name="sector" id="sector"> 
+                        <option value="ADP">ADP</option>
+                        <option value="Legales">Legales</option>
+                        <option value="Operaciones">Operaciones</option>
+                    </select>
+                    <label class="Formulario__EstiloUnitario"  for="Sugerencia"> Sugerencia:<br>
+                        <textarea placeholder="Sugerencia"></textarea>
+                    </label> 
+                    <input class="Formulario__Boton" type="submit" value="ENVIAR">
+                </form>
+            </div>
+            <div class="col"></div>
+
+        </div>
     </main>
-
-
-
-
-
-
-
-    
+    <footer>
+        <!-- linea para separar -->
+        <div Class= "LineaSeparadora"></div>
+        <div class="Pie"> Web para uso interno.</div>
+        <div class="Pie"> Teleperformance Chile.</div>
+        <div class="Pie"> Facundo Keller</div>
+    </footer>        
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
