--- a/pages/documentos.html
+++ b/pages/documentos.html
@@ -13,6 +13,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Rubik+Dirt&display=swap" rel="stylesheet">
+    <!-- ULTRA de google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <!-- favicon -->
     <link rel="shortcut icon" href="../assets/images/favicon.jpg" />
     <!-- hoja de estilos -->
@@ -44,17 +48,68 @@
                 </div>
             </nav>
         </header>
-        <h1 class="TituloPrincipal">Portal TP Chile</h1>
-
+        <h1 class="TituloPrincipal">Documentos</h1>
+    <section class="CuadroDeDescarga">
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
+            <h3>Documentos ADP</h3>
+            <li><a href="">Manual Liquidación</a></li>
+            <li><a href="">Manual ART</a></li>
+            <li><a href="">Manual carga de costos</a></li>
+            <li><a href="../downloads/manuales/manual1.docx">Manual 1</a></li>
+            <li><a href="../downloads/manuales/manual1.docx">Manual 2</a></li>
+            <li><a href="">Manual 3</a></li>
+            <li><a href="">Manual 4</a></li>
+            <li><a href="">Manual 5</a></li>
+        </div>
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
+            <h3>Documentos Legales</h3>
+            <li><a href="">Manual 1</a></li>
+            <li><a href="">Manual 2</a></li>
+            <li><a href="">Manual 3</a></li>
+            <li><a href="">Manual 4</a></li>
+            <li><a href="">Manual 5</a></li>
+        </div>
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
+            <h3>Documentos Licencias</h3>
+            <li><a href="">Manual Enfermedad</a></li>
+            <li><a href="">Manual 1</a></li>
+            <li><a href="">Manual 2</a></li>
+            <li><a href="">Manual 3</a></li>
+            <li><a href="">Manual 4</a></li>
+            <li><a href="">Manual 5</a></li>
+            <li><a href="">Manual 6</a></li>
+            <li><a href="">Manual 7</a></li>
+            <li><a href="">Manual 8</a></li>
+            <li><a href="">Manual 9</a></li>
+            <li><a href="">Manual 10</a></li>
+        </div>
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
+            <h3>Documentos otros</h3>
+            <li><a href="">Manual 1</a></li>
+            <li><a href="">Manual 2</a></li>
+            <li><a href="">Manual 3</a></li>
+            <li><a href="">Manual 4</a></li>
+            <li><a href="">Manual 5</a></li>
+        </div>
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
+            <h3>Documentos otros</h3>
+            <li><a href="">Manual 1</a></li>
+            <li><a href="">Manual 2</a></li>
+            <li><a href="">Manual 3</a></li>
+            <li><a href="">Manual 4</a></li>
+            <li><a href="">Manual 5</a></li>
+        </div>
+    </section>
     </main>
-
-
-
-
-
-
-
-    
+    <div class="gif-footer">
+        <img src="../assets/images/tp-corazon.gif" alt="gif corazon" >
+    </div>
+    <footer>
+        <!-- linea para separar -->
+        <div Class= "LineaSeparadora"></div>
+        <div class="Pie"> Web para uso interno.</div>
+        <div class="Pie"> Facundo Keller</div>
+    </footer>        
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
