--- a/pages/informes.html
+++ b/pages/informes.html
@@ -44,17 +44,16 @@
                 </div>
             </nav>
         </header>
-        <h1 class="TituloPrincipal">Portal TP Chile</h1>
+        <h1 class="TituloPrincipal">Informes</h1>
 
     </main>
-
-
-
-
-
-
-
-    
+    <footer>
+        <!-- linea para separar -->
+        <div Class= "LineaSeparadora"></div>
+        <div class="Pie"> Web para uso interno.</div>
+        <div class="Pie"> Teleperformance Chile.</div>
+        <div class="Pie"> Facundo Keller</div>
+    </footer>    
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
