corregido enlaces barra superior

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     <div class="col-10 AcomodarOpcionesBarraSuperior" >
                         <ul>
                             <div class="OpcionesBarraSuperior">
-                                <li class="OpcionesBarraSuperior__hijo"><a href="../pages/documentos.html" class="text-white">Documentos</a></li>
-                                <li class="OpcionesBarraSuperior__hijo"><a href="../pages/procedimientos.html" class="text-white">Procedimientos</a></li>
-                                <li class="OpcionesBarraSuperior__hijo"><a href="../pages/manuales.html" class="text-white">Manuales</a></li>
-                                <li class="OpcionesBarraSuperior__hijo"><a href="../pages/informes.html" class="text-white">Informes</a></li>
-                                <li class="OpcionesBarraSuperior__hijo"><a href="../pages/contactos.html" class="text-white">Contactos</a></li>
+                                <li class="OpcionesBarraSuperior__hijo"><a href="./pages/documentos.html" class="text-white">Documentos</a></li>
+                                <li class="OpcionesBarraSuperior__hijo"><a href="./pages/procedimientos.html" class="text-white">Procedimientos</a></li>
+                                <li class="OpcionesBarraSuperior__hijo"><a href="./pages/manuales.html" class="text-white">Manuales</a></li>
+                                <li class="OpcionesBarraSuperior__hijo"><a href="./pages/informes.html" class="text-white">Informes</a></li>
+                                <li class="OpcionesBarraSuperior__hijo"><a href="./pages/contactos.html" class="text-white">Contactos</a></li>
                             </div>
                         </ul>
                     </div>
