--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="pagina web interna para uso exclusivo de teleperformance Chile, contacto con teleperformance Chile.">
     <title>TP Chile</title>
     <!-- fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +31,7 @@
             <nav class="container">
                 <div class="row AcomodarBarraSuperior">
                     <div class="col-2 ImagenBarraSuperior">
-                        <a href="../index.html"><img class="LogoSuperiorDerecho" src="../assets/images/Teleperformance-logo-barra.png" alt=""></a>
+                        <a href="../index.html"><img class="LogoSuperiorDerecho" src="../assets/images/Teleperformance-logo-barra.png" alt="c"></a>
                     </div>
                     <div class="col-10 AcomodarOpcionesBarraSuperior" >
                         <ul>
@@ -62,17 +63,18 @@
                     <label class="Formulario__EstiloUnitario" for="email">Decime tu email:
                     <input class="Formulario__EstiloUnitario" type="email" placeholder="Email" name="Email"><br>
                     </label>
-                    <p>En que sector trabajas?</p>
+                    <p>En que sector trabajas?
                     <select class="Formulario__EstiloUnitario"  name="sector" id="sector"> 
                         <option value="ADP">ADP</option>
                         <option value="Legales">Legales</option>
                         <option value="Operaciones">Operaciones</option>
                     </select>
+                    </p>
                     <label class="Formulario__EstiloUnitario"  for="Sugerencia"> Sugerencia:<br>
                         <textarea placeholder="Sugerencia"></textarea>
                     </label> 
-                    <input class="Formulario__Boton" type="submit" value="ENVIAR">
                 </form>
+                <input class="Formulario__Boton" type="submit" value="ENVIAR">
             </div>
             <div class="col"></div>
 
