--- a/pages/datos-operacion.html
+++ b/pages/datos-operacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="pagina web interna para uso exclusivo de teleperformance Chile, informes de teleperformance Chile">
+    <meta name="description" content="pagina web interna para uso exclusivo de teleperformance Chile, datos operacion.">
     <title>TP Chile</title>
     <!-- fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,10 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Rubik+Dirt&display=swap" rel="stylesheet">
-    <!-- ULTRA de google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
     <!-- favicon -->
     <link rel="shortcut icon" href="../assets/images/favicon.jpg" />
     <!-- hoja de estilos -->
@@ -40,7 +36,7 @@
                     <div class="col-10 AcomodarOpcionesBarraSuperior" >
                         <ul>
                             <div class="OpcionesBarraSuperior">
-                                <li class="OpcionesBarraSuperior__hijo"> <a href="../pages/documentos.html" class="text-white">Documentos</a></li>
+                                <li class="OpcionesBarraSuperior__hijo"><a href="../pages/documentos.html" class="text-white">Documentos</a></li>
                                 <li class="OpcionesBarraSuperior__hijo"><a href="../pages/procedimientos.html" class="text-white">Procedimientos</a></li>
                                 <li class="OpcionesBarraSuperior__hijo"><a href="../pages/manuales.html" class="text-white">Manuales</a></li>
                                 <li class="OpcionesBarraSuperior__hijo"><a href="../pages/informes.html" class="text-white">Informes</a></li>
@@ -51,16 +47,18 @@
                 </div>
             </nav>
         </header>
-        <h1 class="TituloPrincipal">Informes</h1>
-
+        <h1 class="TituloPrincipal">Datos operacion</h1>
     </main>
+    <div class="gif-footer">
+        <img src="../assets/images/tp-corazon.gif" alt="animacion corazon" >
+    </div>
     <footer>
         <!-- linea para separar -->
         <div Class= "LineaSeparadora"></div>
         <div class="Pie"> Web para uso interno.</div>
         <div class="Pie"> Teleperformance Chile.</div>
         <div class="Pie"> Facundo Keller</div>
-    </footer>    
+    </footer>  
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
