--- a/pages/documentos.html
+++ b/pages/documentos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="pagina web interna para uso exclusivo de teleperformance Chile, documentos de teleperformance Chile">
     <title>TP Chile</title>
     <!-- fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,7 +35,7 @@
             <nav class="container">
                 <div class="row AcomodarBarraSuperior">
                     <div class="col-2 ImagenBarraSuperior">
-                        <a href="../index.html"><img class="LogoSuperiorDerecho" src="../assets/images/Teleperformance-logo-barra.png" alt=""></a>
+                        <a href="../index.html"><img class="LogoSuperiorDerecho" src="../assets/images/Teleperformance-logo-barra.png" alt="teleperformance chile logo 2022"></a>
                     </div>
                     <div class="col-10 AcomodarOpcionesBarraSuperior" >
                         <ul>
