--- a/pages/novedades-anteriores.html
+++ b/pages/novedades-anteriores.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="pagina web interna para uso exclusivo de teleperformance Chile, Novedades Anteriores.">
     <title>TP Chile</title>
     <!-- fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +31,7 @@
             <nav class="container">
                 <div class="row AcomodarBarraSuperior">
                     <div class="col-2 ImagenBarraSuperior">
-                        <a href="../index.html"><img class="LogoSuperiorDerecho" src="../assets/images/Teleperformance-logo-barra.png" alt=""></a>
+                        <a href="../index.html"><img class="LogoSuperiorDerecho" src="../assets/images/Teleperformance-logo-barra.png" alt="teleperformance chile logo 2022"></a>
                     </div>
                     <div class="col-10 AcomodarOpcionesBarraSuperior" >
                         <ul>
@@ -47,16 +48,8 @@
             </nav>
         </header>
         <h1 class="TituloPrincipal">Portal TP Chile</h1>
-
     </main>
 
-
-
-
-
-
-
-    
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
